# cumin

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  book.toml  index.html
.github/workflows/: rust.yml
docs/: 404.html  cuminc.html  index.html  intro.html  print.html  searchindex.js  searchindex.json  spec.html  tools.html  try-online.html
docs/spec/: array.html  as_cast.html  blocks.html  dict.html  enum.html  fn.html  let.html  modules.html  ops.html  option.html  overview.html  struct.html  tuple.html  types.html  typing.html  values.html
docs/tools/: cumin_py.html  cuminc.html
examples/: README.md  block.cumin  cast.cumin  cast.json  dict.cumin  dict.json  env.cumin  env.env  env.json  equals.cumin  equals.json  equals_invalid.cumin  fun.cumin  fun.json  fun2.cumin  if.cumin  import.cumin  import.json  invalid_typed_array.cumin  kwargs.cumin  kwargs.json  logic_arith_expressions.cumin  logic_arith_expressions.json  math.cumin  math.env  math.json  module.cumin  name_list.cumin  names.cumin  null.cumin  numbers.cumin  options.cumin  options.json  prop.cumin  recursion_type.json  struct.cumin  struct.json  struct2.json  test.sh  type_errors.cumin  (+6 more)
src/: SUMMARY.md  builtins.rs  cuminc.md  errors.rs  eval.rs  eval_wasm.rs  intro.md  json.rs  lib.rs  spec.md  try-online.md
src/parser/: arith.rs  comment.rs  config.rs  cumin.rs  entries.rs  expr.rs  logic.rs  mod.rs  module.rs  statement.rs  typing.rs  util.rs  value.rs
src/spec/: array.md  as_cast.md  blocks.md  dict.md  enum.md  fn.md  let.md  modules.md  ops.md  option.md  overview.md  struct.md  (+4 more)
(+12 files in other folders)
