[package]
name = "cumin"
version = "0.9.7"
authors = ["cympfh <cympfh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
combine = "4.4.0"
structopt = { version = "0.3", default-features = false }

[[bin]]
name = "cuminc"
path = "src/bin/cuminc.rs"
